--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "dev": "vite",
+    "build": " vite build --mode production",
     "preview": "vite preview",
     "cl": "rimraf node_modules"
+  },
+  "resolutions": {
+    "bin-wrapper": "npm:bin-wrapper-china"
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
     "@vime/core": "^5.3.1",
     "@vime/vue-next": "5.3.1",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.14.29",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.27.0",
@@ -25,7 +29,6 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.4",
     "axios": "^0.26.1",
-    "cross-env": "^7.0.3",
     "mockjs": "^1.1.0",
     "postcss": "^8.4.12",
     "qs": "^6.10.3",
@@ -33,6 +36,7 @@
     "typescript": "^4.5.4",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.8.0",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.29.8"
   }
