--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "~/*":["src/*"],
+      "~cpm/*": ["src/components/*"],
+    },
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
@@ -16,7 +21,8 @@
     ],
     "types": [
       "naive-ui/volar",
-      "node"
+      "node",
+      "vite"
     ]
   },
   "include": [
